# rpg-api

./: .env.example  .gitignore  .gitmodules  .railwayignore  README.md  auth.py  config.py  main.py  mcp_bridge.py  pyproject.toml  requirements.txt
mcp_src/src/: repos.py  repository.py  repository_json.py  server.py  test_integration.py  test_utils.py  utils.py
mcp_src/src/tools/: __init__.py  bestiary.py  campaign.py  combat.py  inventory.py  npc.py  quests.py  readers.py
